--- a/drone/.classpath
+++ b/drone/.classpath
@@ -12,5 +12,7 @@
 	<classpathentry exported="true" kind="con" path="io.sarl.eclipse.launching.SARL_SUPPORT"/>
 	<classpathentry kind="lib" path="C:/Users/Alexandre/OneDrive/Documents/UTBM/Branche/GI04/IA51/SARL/vecmath-1.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Alexandre/OneDrive/Documents/UTBM/Branche/GI04/IA51/SARL/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="vecmath-1.5.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
