--- a/.classpath
+++ b/.classpath
@@ -6,8 +6,8 @@
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src/main/sarl/drone"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry exported="true" kind="con" path="io.sarl.eclipse.launching.SARL_SUPPORT"/>
 	<classpathentry kind="lib" path="gson-2.3.1.jar"/>
 	<classpathentry kind="lib" path="vecmath-1.5.1.jar"/>
+	<classpathentry kind="con" path="io.janusproject.plugin.launching.JANUS_SUPPORT"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
